docs: remove /cloud-init base path
