# cmd/cloud-init-server/group_handlers.go
@@ -18,7 +18,7 @@ import (
 //	@Produce		json
 //	@Success		200	{object}	map[string]cistore.ClusterDefaults
 //	@Failure		500	{object}	nil
-//	@Router			/cloud-init/admin/groups [get]
+//	@Router			/admin/groups [get]
 func (h CiHandler) GetGroups(w http.ResponseWriter, r *http.Request) {
 	var (
 		groups map[string]cistore.GroupData
@@ -58,7 +58,7 @@ func (h CiHandler) GetGroups(w http.ResponseWriter, r *http.Request) {
 //	@Failure		422		{object}	nil
 //	@Header			201		{string}	Location			"/groups/{id}"
 //	@Param			group	body		cistore.GroupData	true	"Group data"
-//	@Router			/cloud-init/admin/groups [post]
+//	@Router			/admin/groups [post]
 func (h CiHandler) AddGroupHandler(w http.ResponseWriter, r *http.Request) {
 	var (
 		data cistore.GroupData
@@ -91,7 +91,7 @@ func (h CiHandler) AddGroupHandler(w http.ResponseWriter, r *http.Request) {
 //	@Success		200	{object}	cistore.GroupData
 //	@Failure		500	{object}	nil
 //	@Param			id	path		string	true	"Group ID"
-//	@Router			/cloud-init/admin/groups/{id} [get]
+//	@Router			/admin/groups/{id} [get]
 func (h CiHandler) GetGroupHandler(w http.ResponseWriter, r *http.Request) {
 	var (
 		id    string
@@ -136,7 +136,7 @@ func (h CiHandler) GetGroupHandler(w http.ResponseWriter, r *http.Request) {
 //	@Header			201			{string}	Location			"/groups/{name}"
 //	@Param			name		path		string				true	"Group name"
 //	@Param			group_data	body		cistore.GroupData	true	"Group data"
-//	@Router			/cloud-init/admin/groups/{name} [put]
+//	@Router			/admin/groups/{name} [put]
 func (h CiHandler) UpdateGroupHandler(w http.ResponseWriter, r *http.Request) {
 	var (
 		groupName string
@@ -170,7 +170,7 @@ func (h CiHandler) UpdateGroupHandler(w http.ResponseWriter, r *http.Request) {
 //	@Success		200	{object}	nil
 //	@Failure		500	{object}	nil
 //	@Param			id	path		string	true	"Group ID"
-//	@Router			/cloud-init/admin/groups/{id} [delete]
+//	@Router			/admin/groups/{id} [delete]
 func (h CiHandler) RemoveGroupHandler(w http.ResponseWriter, r *http.Request) {
 	var (
 		id  string
