# docs/swagger.yaml
@@ -206,7 +206,7 @@ info:
   title: OpenCHAMI Cloud-Init Server API
   version: 1.0.0
 paths:
-  /cloud-init/{group}.yaml:
+  /{group}.yaml:
     get:
       description: |-
         Get user-data for a particular group based on its name.
@@ -232,7 +232,7 @@ paths:
         "500":
           description: Internal Server Error
       summary: Get user-data for a particular group
-  /cloud-init/admin/cluster-defaults:
+  /admin/cluster-defaults:
     get:
       description: Get default meta-data values for cluster.
       produces:
@@ -270,7 +270,7 @@ paths:
       tags:
       - admin
       - cluster-defaults
-  /cloud-init/admin/groups:
+  /admin/groups:
     get:
       description: |-
         Get meta-data and cloud-init config for all groups known to
@@ -328,7 +328,7 @@ paths:
       tags:
       - admin
       - groups
-  /cloud-init/admin/groups/{id}:
+  /admin/groups/{id}:
     delete:
       description: Delete a group with its meta-data and cloud-init config.
       parameters:
@@ -369,7 +369,7 @@ paths:
       tags:
       - admin
       - groups
-  /cloud-init/admin/groups/{name}:
+  /admin/groups/{name}:
     put:
       consumes:
       - application/json
@@ -408,7 +408,7 @@ paths:
       tags:
       - admin
       - groups
-  /cloud-init/admin/impersonation/{id}/{group}.yaml:
+  /admin/impersonation/{id}/{group}.yaml:
     get:
       description: |-
         Get user-data for a particular group based on its name.
@@ -438,7 +438,7 @@ paths:
         "500":
           description: Internal Server Error
       summary: Get user-data for a particular group
-  /cloud-init/admin/impersonation/{id}/meta-data:
+  /admin/impersonation/{id}/meta-data:
     get:
       description: |-
         Get meta-data for requesting node based on the requesting IP.
@@ -465,7 +465,7 @@ paths:
         "500":
           description: Internal Server Error
       summary: Get meta-data for requesting node
-  /cloud-init/admin/impersonation/{id}/user-data:
+  /admin/impersonation/{id}/user-data:
     get:
       description: |-
         Get user-data for requesting node base on the requesting IP. For
@@ -487,7 +487,7 @@ paths:
           schema:
             type: string
       summary: Get user-data for requesting node
-  /cloud-init/admin/impersonation/{id}/vendor-data:
+  /admin/impersonation/{id}/vendor-data:
     get:
       description: |-
         For OpenCHAMI, the vendor-data will always be a list of other
@@ -509,7 +509,7 @@ paths:
           schema:
             type: string
       summary: Get vendor data
-  /cloud-init/admin/instance-info/{id}:
+  /admin/instance-info/{id}:
     put:
       consumes:
       - application/json
@@ -538,7 +538,7 @@ paths:
       tags:
       - admin
       - instance-data
-  /cloud-init/meta-data:
+  /meta-data:
     get:
       description: |-
         Get meta-data for requesting node based on the requesting IP.
@@ -560,7 +560,7 @@ paths:
         "500":
           description: Internal Server Error
       summary: Get meta-data for requesting node
-  /cloud-init/openapi.json:
+  /openapi.json:
     get:
       produces:
       - application/json
@@ -572,7 +572,7 @@ paths:
         "500":
           description: Internal Server Error
       summary: Return JSON-formatted OpenAPI documentation
-  /cloud-init/phone-home/{id}:
+  /phone-home/{id}:
     post:
       description: |-
         Signal to the cloud-init server that the specific host has completed running
@@ -625,7 +625,7 @@ paths:
         configuration
       tags:
       - phone-home
-  /cloud-init/user-data:
+  /user-data:
     get:
       description: |-
         Get user-data for requesting node base on the requesting IP. For
@@ -642,7 +642,7 @@ paths:
           schema:
             type: string
       summary: Get user-data for requesting node
-  /cloud-init/vendor-data:
+  /vendor-data:
     get:
       description: |-
         For OpenCHAMI, the vendor-data will always be a list of other
@@ -659,7 +659,7 @@ paths:
           schema:
             type: string
       summary: Get vendor data
-  /cloud-init/wg-init:
+  /wg-init:
     post:
       consumes:
       - application/json
